# synthything

./: CMakeLists.txt  readme.md
cmake-modules/: FindJack.cmake
include/: analysis.hpp  audio.hpp  audio_interface.hpp  engine.hpp  filter.hpp  generator.hpp  jack.hpp  midi.hpp
src/: analysis.cpp  audio.cpp  engine.cpp  filter.cpp  generator.cpp  jack.cpp  main.cpp
